# setup_repo

./: CMakeCache.txt  CMakeLists.txt  README.md  main-2.cpp  main-3.cpp  main.cpp
Google_tests/: CMakeLists.txt
Google_tests/team-1-tests/: CMakeLists.txt  XXTest.cpp
Google_tests/team-2-tests/: CMakeLists.txt  XXTest.cpp
Google_tests/team-3-tests/: CMakeLists.txt  XXTest.cpp
team-1-files/: CMakeCache.txt  CMakeLists.txt  Team1Xx.cpp  Team1Xx.h  Xx.cpp  Xx.h
team-2-files/: CMakeLists.txt  Team2Xx.cpp  Team2Xx.h
team-3-files/: CMakeLists.txt  Team3Xx.cpp  Team3Xx.h
